--- a/buildroot/configs/rockchip_rk3506_luckfox_defconfig
+++ b/buildroot/configs/rockchip_rk3506_luckfox_defconfig
@@ -11,17 +11,25 @@ BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_CMAKE_CTEST=y
 BR2_PACKAGE_CMATRIX=y
 BR2_PACKAGE_COREUTILS=y
+BR2_PACKAGE_DBUS_CPP=y
+BR2_PACKAGE_DBUS_GLIB=y
+BR2_PACKAGE_DBUS_TRIGGERD=y
 BR2_PACKAGE_DIRECTFB=y
 BR2_PACKAGE_DNSMASQ=y
 BR2_PACKAGE_DOOM_WAD=y
+BR2_PACKAGE_DOSBOX=y
 BR2_PACKAGE_EVTEST=y
+BR2_PACKAGE_EXTRA_CMAKE_MODULES=y
 BR2_PACKAGE_F2FS_TOOLS=y
 BR2_PACKAGE_FBSET=y
 BR2_PACKAGE_FBTERM=y
+BR2_PACKAGE_FCITX=y
+BR2_PACKAGE_FCITX_FBTERM=y
 BR2_PACKAGE_FILE=y
 BR2_PACKAGE_FINDUTILS=y
 BR2_PACKAGE_GAWK=y
 BR2_PACKAGE_GCC_TARGET=y
+BR2_PACKAGE_GETTEXT=y
 BR2_PACKAGE_GIT=y
 BR2_PACKAGE_GLIBC_UTILS=y
 BR2_PACKAGE_GPTFDISK=y
@@ -30,6 +38,8 @@ BR2_PACKAGE_GPTFDISK_SGDISK=y
 BR2_PACKAGE_GREP=y
 BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_6_1=y
+BR2_PACKAGE_HOST_OPKG_UTILS=y
+BR2_PACKAGE_HOST_ZSTD=y
 BR2_PACKAGE_HTOP=y
 BR2_PACKAGE_HTPDATE=y
 BR2_PACKAGE_IMLIB2_ID3=y
@@ -51,6 +61,7 @@ BR2_PACKAGE_LIBRETRO_FCEUNEXT=y
 BR2_PACKAGE_LIBRETRO_GEARBOY=y
 BR2_PACKAGE_LIBRETRO_MGBA=y
 BR2_PACKAGE_LIBTOOL=y
+BR2_PACKAGE_LIBXKBCOMMON=y
 BR2_PACKAGE_LRZSZ=y
 BR2_PACKAGE_LUA=y
 BR2_PACKAGE_LUA_READLINE=y
@@ -115,7 +126,7 @@ BR2_PACKAGE_SDL2_DIRECTFB=y
 BR2_PACKAGE_SDL2_GFX=y
 BR2_PACKAGE_SDL2_IMAGE=y
 BR2_PACKAGE_SDL2_MIXER=y
-BR2_PACKAGE_SDL2_NET=y
+BR2_PACKAGE_SDL2_SOUND_PLAYSOUND=y
 BR2_PACKAGE_SDL2_TTF=y
 BR2_PACKAGE_SDL_DIRECTFB=y
 BR2_PACKAGE_SDL_GFX=y
@@ -124,6 +135,7 @@ BR2_PACKAGE_SDL_IMAGE_GIF=y
 BR2_PACKAGE_SDL_IMAGE_JPEG=y
 BR2_PACKAGE_SDL_IMAGE_PNG=y
 BR2_PACKAGE_SDL_IMAGE_TIFF=y
+BR2_PACKAGE_SDL_SOUND=y
 BR2_PACKAGE_SDL_TTF=y
 BR2_PACKAGE_SED=y
 BR2_PACKAGE_STRACE=y
@@ -136,6 +148,7 @@ BR2_PACKAGE_VIM=y
 BR2_PACKAGE_WGET=y
 BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
 BR2_PACKAGE_WQY_ZENHEI=y
+BR2_PACKAGE_ZSTD=y
 # BR2_PREFER_ROCKCHIP_RGA is not set
 BR2_ROCKCHIP_ALSA_CONFIG_INSTALL_INIT_SCRIPT=y
 BR2_ROOTFS_OVERLAY+="board/rockchip/rk3506/fast-display-overlay/ board/rockchip/rk3506/luckfox-overlay/ board/rockchip/rk3506/picocalc-overlay/"
