--- a/kernel/arch/arm/configs/rk3506_luckfox_defconfig
+++ b/kernel/arch/arm/configs/rk3506_luckfox_defconfig
@@ -166,7 +166,9 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_SLIP=y
-# CONFIG_USB_NET_DRIVERS is not set
+CONFIG_USB_RTL8150=m
+CONFIG_USB_RTL8152=m
+CONFIG_USB_LAN78XX=m
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
 # CONFIG_WLAN_VENDOR_ATH is not set
 # CONFIG_WLAN_VENDOR_ATMEL is not set
@@ -182,7 +184,9 @@ CONFIG_RT2X00=m
 CONFIG_RT2800USB=m
 CONFIG_RT2800USB_RT3573=y
 CONFIG_RT2800USB_RT53XX=y
-# CONFIG_WLAN_VENDOR_REALTEK is not set
+CONFIG_RTL8187=m
+# CONFIG_RTL_CARDS is not set
+CONFIG_RTL8XXXU=m
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_SILABS is not set
 # CONFIG_WLAN_VENDOR_ST is not set
@@ -333,6 +337,8 @@ CONFIG_DMABUF_HEAPS_CMA=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_VHOST_MENU is not set
 CONFIG_STAGING=y
+CONFIG_R8712U=m
+CONFIG_R8188EU=m
 # CONFIG_ROCKCHIP_CLK_INV is not set
 CONFIG_ROCKCHIP_CLK_OUT=y
 # CONFIG_ROCKCHIP_CLK_PVTM is not set
